# agent-runbooks

./: Cargo.toml  README.md  SPEC.md  install.sh
evals/: README.md  scaffold_no_overwrite.md  step_execution_order.md  verification_not_skipped.md
examples/: precommit.md  prerelease.md
ontology/: audit.md  context.md  guardrail.md  notification.md  runbook.md  skill.md  trigger.md
runbooks/: precommit.md  prerelease.md
src/: init.rs  lib.rs  main.rs
