[package]
name = "agent-runbooks"
version = "0.1.0"
edition = "2024"
description = "Convention and validation for AI agent runbooks"
license = "CC0-1.0"
repository = "https://github.com/btakita/agent-runbooks"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
